--- a/configure.ac
+++ b/configure.ac
@@ -122,7 +122,7 @@ AM_CONDITIONAL([ENABLE_XDG_V5], [test x$ENABLE_XDG_V5 = xtrue])
 WAYLANDLIB="-lwayland-server"
 AC_SUBST(WAYLANDLIB)
 
-AC_CONFIG_FILES([Makefile])
+AC_CONFIG_FILES([Makefile westeros-compositor.pc])
 AC_SUBST(WAYLAND_CFLAGS)
 AC_SUBST(GUPNP_VERSION)
 AC_SUBST(ENABLE_WESTEROS_TEST)
