--- a/configure.ac
+++ b/configure.ac
@@ -27,6 +27,9 @@ IARM_CFLAGS=" "
 ENABLE_WESTEROS_APP=" "
 ENABLE_WESTEROS_TEST=" "
 EGL_DETECTED=" "
+GLESV2_DETECTED=" "
+GLEW_DETECTED=" "
+WAYLAND_EGL_DETECTED=" "
 ENABLE_XDG_V4=" "
 ENABLE_XDG_V5=" "
 
@@ -42,10 +45,16 @@ PKG_CHECK_MODULES([GLIB],[glib-2.0 >= 2.22.5])
 PKG_CHECK_MODULES([GTHREAD],[gthread-2.0 >= 2.38.2])
 PKG_CHECK_MODULES([WAYLAND_CLIENT],[wayland-client >= 1.6.0])
 PKG_CHECK_MODULES([WAYLAND_SERVER],[wayland-server >= 1.6.0])
+PKG_CHECK_MODULES([WAYLAND_EGL],[wayland-egl >= 0.0],[WAYLAND_EGL_DETECTED=true],[WAYLAND_EGL_DETECTED=false])
 PKG_CHECK_MODULES([XKBCOMMON],[xkbcommon >= 0.4])
 PKG_CHECK_MODULES([EGL],[egl >= 0.0],[EGL_DETECTED=true],[EGL_DETECTED=false])
+PKG_CHECK_MODULES([GLESV2],[glesv2 >= 0.0],[GLESV2_DETECTED=true],[GLESV2_DETECTED=false])
+PKG_CHECK_MODULES([GLEW],[glew >= 0.0],[GLEW_DETECTED=true],[GLEW_DETECTED=false])
 
+AM_CONDITIONAL([HAVE_WAYLAND_EGL], [test x$WAYLAND_EGL_DETECTED = xtrue])              
 AM_CONDITIONAL([HAVE_EGL], [test x$EGL_DETECTED = xtrue])              
+AM_CONDITIONAL([HAVE_GLESV2], [test x$GLESV2_DETECTED = xtrue])              
+AM_CONDITIONAL([HAVE_GLEW], [test x$GLEW_DETECTED = xtrue])              
 
 AC_ARG_ENABLE([app],
               AS_HELP_STRING([--enable-app],[enable westeros app (default is no)]),
@@ -125,7 +134,7 @@ AC_SUBST(WAYLANDLIB)
 AC_CONFIG_FILES([Makefile westeros-compositor.pc])
 AC_SUBST(WAYLAND_CFLAGS)
 AC_SUBST(GUPNP_VERSION)
-AC_SUBST(ENABLE_WESTEROS_TEST)
+AC_SUBST(ENABLE_WESTEROS_APP)
 AC_SUBST(ENABLE_WESTEROS_TEST)
 AC_OUTPUT
 
