Link compositor with wayland-egl when available to enable repeater operation
Change-Id: I60c045aef1a06e263059bca2c369c10d5f8d3022

--- a/Makefile.am
+++ b/Makefile.am
@@ -124,6 +124,7 @@ libwesteros_compositor_la_LDFLAGS= \
    $(AM_LDFLAGS) \
    $(WAYLAND_SERVER_LIBS) \
    $(WAYLAND_CLIENT_LIBS) \
+   $(WAYLAND_EGL_LIBS) \
    $(XKBCOMMON_LIBS) \
    $(WESTEROS_COMPOSITOR_EXTRA_LIBS) \
    -lxkbcommon \
