Add missing simple buffer link reference to nexus render module build
Change-Id: Ie4005ac1689aac8b7ce383db1683221e9c7201ce
Signed-off-by: Jeff Wannamaker <jeff_wannamaker@cable.comcast.com>

--- a/brcm/westeros-render-nexus/Makefile.am
+++ b/brcm/westeros-render-nexus/Makefile.am
@@ -30,7 +30,7 @@ lib_LTLIBRARIES = libwesteros_render_nexus.la
 
 libwesteros_render_nexus_la_SOURCES = westeros-render-nexus.cpp
 libwesteros_render_nexus_la_includedir = $(includedir)
-libwesteros_render_nexus_la_LDFLAGS= -lnxclient
+libwesteros_render_nexus_la_LDFLAGS= -lnxclient -lwesteros_simplebuffer_server
 if HAVE_WAYLAND_EGL
 AM_CXXFLAGS += -DWESTEROS_HAVE_WAYLAND_EGL
 libwesteros_render_nexus_la_LDFLAGS += -lwayland-egl
