Enhance sample client app: -add wayland keyboard use -add wayland pointer use -obey wl_output mode Plus a few minor typo corrections
Change-Id: I7079ae1c82c0c7b2ac685c4eea29699b293d4cc2
Signed-off-by: Jeff Wannamaker <jeff_wannamaker@cable.comcast.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -96,6 +96,8 @@ westeros_test_SOURCES = westeros-test.cpp
 westeros_test_LDFLAGS= \
    $(AM_LDFLAGS) \
    $(WAYLAND_CLIENT_LIBS) \
+   $(XKBCOMMON_LIBS) \
+   -lxkbcommon \
    -lwesteros_simpleshell_client \
    $(WSTEGL_LIBS) \
    -lEGL
