Add explicit lib references for rpi video graphics path
Change-Id: I4e52f01bca59ef4acabebd4b999726bd0861805d
Signed-off-by: Jeff Wannamaker <jeff_wannamaker@cable.comcast.com>

--- a/rpi/westeros-sink/Makefile.am
+++ b/rpi/westeros-sink/Makefile.am
@@ -43,6 +43,9 @@ libwesteros_sink_la_LDFLAGS= \
    -lwesteros_compositor \   
    -lwesteros_simplebuffer_client \
    -lwesteros_simpleshell_client \
+   -lwayland-egl \
+   -lGLESv2 \
+   -lEGL \
    -ldl
    
 distcleancheck_listfiles = *-libtool
