Add Essos library for creating EGL/Wayland applications
Change-Id: Ided3c83e8c996bc264b3536cf136cdb2bceb0ec4
Signed-off-by: Jeff Wannamaker <jeff_wannamaker@cable.comcast.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -19,7 +19,7 @@
 
 AUTOMAKE_OPTIONS = subdir-objects
 
-SUBDIRS = 
+SUBDIRS = essos
 AM_CXXFLAGS= \
 	-I$(top_srcdir)/include \
    -I${PKG_CONFIG_SYSROOT_DIR}/$(includedir)/wayland \
