Need to change library name as library name should match with plugin name from gst-1.14 and higher this makes westerossink to work with out failing in plugin registration
Change-Id: I981a04ad08dc3a43d0af87681e2a4f722ef688d3
Signed-off-by: pnandyala <pavan.nandyala@lnttechservices.com>

--- a/rpi/westeros-sink/Makefile.am
+++ b/rpi/westeros-sink/Makefile.am
@@ -29,15 +29,15 @@ AM_CFLAGS = $(GST_CFLAGS) -DSTANDALONE -D__STDC_CONSTANT_MACROS -D__STDC_LIMIT_M
 
 AM_LDFLAGS = $(GST_LIBS) $(GSTBASE_LIBS) $(WAYLANDLIB) -avoid-version
 
-plugin_LTLIBRARIES = libwesteros_sink.la
+plugin_LTLIBRARIES = libgstwesterossink.la
 
-libwesteros_sink_la_SOURCES = westeros-sink.c westeros-sink-soc.c
+libgstwesterossink_la_SOURCES = westeros-sink.c westeros-sink-soc.c
 
-libwesteros_sink_la_CFLAGS= \
+libgstwesterossink_la_CFLAGS= \
    $(AM_CFLAGS) \
    $(GST_CFLAGS)
    
-libwesteros_sink_la_LDFLAGS= \
+libgstwesterossink_la_LDFLAGS= \
    $(AM_LDFLAGS) \
    $(GST_LIBS)  $(GSTBASE_LIBS) $(WAYLANDLIB) -avoid-version \
    -lwesteros_compositor \   
@@ -51,20 +51,20 @@ libwesteros_sink_la_LDFLAGS= \
 distcleancheck_listfiles = *-libtool
 
 ## IPK Generation Support
-libwesteros_sink_IPK_OUTDIR = $(abs_top_builddir)/ipk
-libwesteros_sink_IPK_STAGING_DIR=$(abs_top_builddir)/staging_dir
-libwesteros_sink_IPK_TMP_DIR=$(libwesteros_sink_IPK_STAGING_DIR)/ipk
+libgstwesterossink_IPK_OUTDIR = $(abs_top_builddir)/ipk
+libgstwesterossink_IPK_STAGING_DIR=$(abs_top_builddir)/staging_dir
+libgstwesterossink_IPK_TMP_DIR=$(libgstwesterossink_IPK_STAGING_DIR)/ipk
 
-libwesteros_sink_CONTROL_FILES = control
-libwesteros_sink_IPK_FILES  = debian-binary control.tar.gz data.tar.gz
-libwesteros_sink_IPK_OUTPUT = libwesteros_sink.ipk
+libgstwesterossink_CONTROL_FILES = control
+libgstwesterossink_IPK_FILES  = debian-binary control.tar.gz data.tar.gz
+libgstwesterossink_IPK_OUTPUT = libgstwesterossink.ipk
 
 package_ipk:
 	@echo "Generating IPK Package"
-	$(MAKE) prefix=$(libwesteros_sink_IPK_STAGING_DIR) install
-	$(mkdir_p) $(libwesteros_sink_IPK_TMP_DIR)/usr/lib/$(LIB_SUB_DIR)
-	cp -aRf $(libwesteros_sink_IPK_STAGING_DIR)/lib/$(LIB_SUB_DIR)/*.so $(libwesteros_sink_IPK_TMP_DIR)/usr/lib/$(LIB_SUB_DIR)
-	tar -czvf $(libwesteros_sink_IPK_OUTDIR)/data.tar.gz -C $(libwesteros_sink_IPK_TMP_DIR) usr
-	tar -czvf $(libwesteros_sink_IPK_OUTDIR)/control.tar.gz -C $(libwesteros_sink_IPK_OUTDIR) $(libwesteros_sink_CONTROL_FILES)
-	cd $(libwesteros_sink_IPK_OUTDIR) && ar cr $(libwesteros_sink_IPK_OUTPUT) $(libwesteros_sink_IPK_FILES) && cd -
+	$(MAKE) prefix=$(libgstwesterossink_IPK_STAGING_DIR) install
+	$(mkdir_p) $(libgstwesterossink_IPK_TMP_DIR)/usr/lib/$(LIB_SUB_DIR)
+	cp -aRf $(libgstwesterossink_IPK_STAGING_DIR)/lib/$(LIB_SUB_DIR)/*.so $(libgstwesterossink_IPK_TMP_DIR)/usr/lib/$(LIB_SUB_DIR)
+	tar -czvf $(libgstwesterossink_IPK_OUTDIR)/data.tar.gz -C $(libgstwesterossink_IPK_TMP_DIR) usr
+	tar -czvf $(libgstwesterossink_IPK_OUTDIR)/control.tar.gz -C $(libgstwesterossink_IPK_OUTDIR) $(libgstwesterossink_CONTROL_FILES)
+	cd $(libgstwesterossink_IPK_OUTDIR) && ar cr $(libgstwesterossink_IPK_OUTPUT) $(libgstwesterossink_IPK_FILES) && cd -
 	
