Essos fixes:              -fix cases of uninitialed return codes              -improve support for window size and position
Change-Id: I8ecf7452efc2961d3ea6bf619a15a0b2184d5488
Signed-off-by: Jeff Wannamaker <jeff_wannamaker@cable.comcast.com>

--- a/essos/Makefile.am
+++ b/essos/Makefile.am
@@ -42,7 +42,7 @@ endif
 endif
 
 libessos_la_CXXFLAGS += -DHAVE_WESTEROS $(WESTEROS_CFLAGS)
-libessos_la_LDFLAGS += -lwesteros_gl
+libessos_la_LDFLAGS += -lwesteros_gl -lwesteros_simpleshell_client
 
 essos_sample_SOURCES = essos-sample.cpp
 essos_sample_LDFLAGS = $(AM_FLAGS) -lessos -lGLESv2
