Fix autoconf failures in westeros with Yocto v2.6
Change-Id: I1ad099b4eef923f26be574981179369c00a7b3b1
Signed-off-by: Deva_Thiyagarajan2@comcast.com

--- a/essos/configure.ac
+++ b/essos/configure.ac
@@ -22,8 +22,8 @@
 dnl AC_PREREQ([2.65])
 AC_INIT(essos, 1.0.0, jeff_wannamaker@cable.comcast.com,essos)
 AC_CONFIG_SRCDIR([])
-AC_CONFIG_HEADERS([cfg/config.h])
-AC_CONFIG_MACRO_DIR([cfg])
+AC_CONFIG_HEADERS([config.h])
+AC_CONFIG_MACRO_DIR([.])
 AC_CONFIG_AUX_DIR([.])
 AM_INIT_AUTOMAKE([foreign no-dist-gzip dist-bzip2 1.9])
 LT_INIT
