Start adding display setting management for Essos apps
Change-Id: Ibbec0996fa410d4a8fc13109b3823614c788a209
Signed-off-by: jwanna001 <jeff_wannamaker@cable.comcast.com>

--- a/rpi/Makefile.am
+++ b/rpi/Makefile.am
@@ -34,6 +34,7 @@ libwesteros_gl_la_includedir = $(includedir)
 libwesteros_gl_la_CXXFLAGS= $(AM_CFLAGS) -I=/usr/include/interface/vmcs_host/linux
 
 libwesteros_gl_la_LDFLAGS= \
+   -lpthread \
    $(AM_LDFLAGS)
 
 pkgconfigdir = $(libdir)/pkgconfig
