--- a/essos/Makefile.am
+++ b/essos/Makefile.am
@@ -30,7 +30,7 @@ libessos_la_include_HEADERS = essos.h
 libessos_la_includedir = $(includedir)
 
 libessos_la_CXXFLAGS = $(AM_CXXFLAGS)
-libessos_la_LDFLAGS = $(AM_LDFLAGS) -lEGL
+libessos_la_LDFLAGS = $(AM_LDFLAGS) -lEGL -ldl
 
 if HAVE_WAYLAND
 if HAVE_WAYLAND_EGL
