Added nxclient_local switch flag If nxclient and server are running in the same process space, this messes up the RPC used by nxserver <-> nxclients if you link to libnxclient. This issue is solved by linking with libnxclient_local
Change-Id: If22aa633dbc4119a8317636faff1b38ee8422e2b
Signed-off-by:
bramoosterhuis <b.oosterhuis@metrological.com>
HaseenaSainul <h.sainul@metrological.com>

--- a/brcm/Makefile.am
+++ b/brcm/Makefile.am
@@ -47,7 +47,13 @@ libwesteros_gl_la_LDFLAGS= \
    $(AM_LDFLAGS) \
    -lwayland-egl \
    -lpthread \
-   -lnexus
+   ${NEXUS_LD_LIBRARIES}
+
+if NXCLIENT_LOCAL
+libwesteros_gl_la_LDFLAGS += -lnxclient_local
+else
+libwesteros_gl_la_LDFLAGS += -lnxclient
+endif
 
 distcleancheck_listfiles = *-libtool
 
