More display setting management for Essos apps
Change-Id: I0a402d25c6a20316d6e3b1195cec9bced4e6f176
Signed-off-by: jwanna001 <jeff_wannamaker@cable.comcast.com>

--- a/brcm/Makefile.am
+++ b/brcm/Makefile.am
@@ -46,6 +46,7 @@ libwesteros_gl_la_CXXFLAGS= $(AM_CFLAGS)
 libwesteros_gl_la_LDFLAGS= \
    $(AM_LDFLAGS) \
    -lwayland-egl \
+   -lpthread \
    -lnexus
 
 distcleancheck_listfiles = *-libtool
