Add version number
Change-Id: I0915f14fffb7f4a891f72d5103173962d8db72f7
Signed-off-by: jwanna001 <jeff_wannamaker@cable.comcast.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -134,6 +134,7 @@ libwesteros_compositor_la_SOURCES = \
    protocol/vpc-protocol.c
 libwesteros_compositor_la_include_HEADERS = \
    westeros-compositor.h \
+   westeros-version.h \
    westeros-render.h \
    protocol/vpc-client-protocol.h
 libwesteros_compositor_la_includedir = $(includedir)
