--- a/essos/Makefile.am
+++ b/essos/Makefile.am
@@ -29,7 +29,7 @@ libessos_la_SOURCES = essos.cpp
 libessos_la_include_HEADERS = essos.h
 libessos_la_includedir = $(includedir)
 
-libessos_la_CXXFLAGS = $(AM_CXXFLAGS)
+libessos_la_CXXFLAGS = $(AM_CXXFLAGS) -I$(top_srcdir)/..
 libessos_la_LDFLAGS = $(AM_LDFLAGS) -lEGL -ldl
 
 if HAVE_WAYLAND
