Add support for HDR parameter handling
Change-Id: I771d2d44922f0ac20efcde4b06496a8459bdc252
Signed-off-by: jwanna001 <jeff_wannamaker@cable.comcast.com>

--- a/brcm/westeros-sink/Makefile.am
+++ b/brcm/westeros-sink/Makefile.am
@@ -46,6 +46,7 @@ libgstwesterossink_la_LDFLAGS= \
    -lwesteros_compositor \   
    -lwesteros_simplebuffer_client \
    -lwesteros_simpleshell_client \
+   -lgstvideo-1.0 \
    -lwayland-egl \
    -lnxclient \
    -lnexus
