Add support for v4l2
Change-Id: I9fbfee75245c99b03654c07f92633cddc57dc0c8
Signed-off-by: jwanna001 <jeff_wannamaker@cable.comcast.com>

--- a/test/Makefile.brcm
+++ b/test/Makefile.brcm
@@ -61,6 +61,8 @@ init:
 	cd brcm/westeros-sink && rm -f *.o && rm -f *.lo && rm -f *.gcno && rm -f && rm -f *.gcov
 	rm -f *.o && rm -f *.gcov && rm -f *.gcno && rm -f *.gcda
 	rm -f *.o && rm -f *.lo && rm -f .libs/*
+	rm -f .simplebuffer
+	rm -f .simpleshell
 	rm -f .brcm-em
 	rm -f external/install/include/vpc*.h	
 	
