adding EGL Cflags
  - added in westeros and essos

Change-Id: I07d2466062f4180156b39e1c95feafbb68b35b35
Signed-off-by: Moorthy Baskar <moorthy.baskaravenkatraman-sambamoorthy@linaro.org>

--- a/Makefile.am
+++ b/Makefile.am
@@ -36,6 +36,10 @@ if ENABLE_ESSOS
 SUBDIRS += essos
 endif
 
+if HAVE_EGL
+AM_CXXFLAGS += ${EGL_CFLAGS}
+endif
+
 if HAVE_WAYLAND_EGL
 AM_CXXFLAGS += -DWESTEROS_HAVE_WAYLAND_EGL
 WSTEGL_LIBS= -lwayland-egl -lGLESv2
