--- a/essos/configure.ac
+++ b/essos/configure.ac
@@ -52,15 +52,18 @@ AC_SUBST(AM_DEFAULT_VERBOSITY)])
 HAVE_WAYLAND=" "
 HAVE_WAYLAND_EGL=" "
 HAVE_XKB=" "
+PKG_CHECK_MODULES([EGL], [egl >= 0.0], [HAVE_EGL=true], [HAVE_EGL=false])
 PKG_CHECK_MODULES([WAYLAND],[wayland-client >= 1.6.0], [HAVE_WAYLAND=true], [HAVE_WAYLAND=false])
 PKG_CHECK_MODULES([WAYLAND_EGL],[wayland-egl >= 1.0.0], [HAVE_WAYLAND_EGL=true], [HAVE_WAYLAND_EGL=false])
 PKG_CHECK_MODULES([XKBCOMMON],[xkbcommon >= 0.5.0], [HAVE_XKB=true], [HAVE_XKB=false])
 
+AM_CONDITIONAL([HAVE_EGL], [test x$HAVE_EGL = xtrue])
 AM_CONDITIONAL([HAVE_WAYLAND], [test x$HAVE_WAYLAND = xtrue])
 AM_CONDITIONAL([HAVE_WAYLAND_EGL], [test x$HAVE_WAYLAND_EGL = xtrue])
 AM_CONDITIONAL([HAVE_XKB], [test x$HAVE_XKB = xtrue])
 
 AC_CONFIG_FILES([Makefile])
+AC_SUBST(HAVE_EGL)
 AC_SUBST(HAVE_WAYLAND)
 AC_SUBST(HAVE_WAYLAND_EGL)
 AC_SUBST(HAVE_XKB)
