--- a/essos/Makefile.am
+++ b/essos/Makefile.am
@@ -49,6 +49,10 @@ libessos_la_CXXFLAGS += -DHAVE_WESTEROS $(WESTEROS_CFLAGS)
 libessos_la_LDFLAGS += -lwesteros_gl -lwesteros_simpleshell_client
 
 essos_sample_SOURCES = essos-sample.cpp
+essos_sample_CXXFLAGS = ${AM_CXXFLAGS}
+if HAVE_EGL
+essos_sample_CXXFLAGS += ${EGL_CFLAGS}
+endif
 essos_sample_LDFLAGS = $(AM_FLAGS) -lessos -lGLESv2
 
 ## IPK Generation Support
