Add test case for Essos pointer events
Change-Id: I8f5864bdb24b43389e1b2c60c3ba1ed50f25087b
Signed-off-by: jwanna001 <jeff_wannamaker@cable.comcast.com>

--- a/test/Makefile.brcm
+++ b/test/Makefile.brcm
@@ -59,6 +59,7 @@ init:
 	cd brcm && rm -f *.o && rm -f *.lo && rm -f *.gcno && rm -f && rm -f *.gcov
 	cd brcm/westeros-render-nexus && rm -f *.o && rm -f *.lo && rm -f *.gcno && rm -f && rm -f *.gcov
 	cd brcm/westeros-sink && rm -f *.o && rm -f *.lo && rm -f *.gcno && rm -f && rm -f *.gcov
+	cd ../brcm-em && rm -f *.o && rm -f *.gcov && rm -f *.gcno && rm -f *.gcda
 	rm -f *.o && rm -f *.gcov && rm -f *.gcno && rm -f *.gcda
 	rm -f *.o && rm -f *.lo && rm -f .libs/*
 	rm -f .simplebuffer
