westeros-soc-drm: Add EGL defines to CFLAGS as https://github.com/rdkcmf/westeros/commit/24c0123a0c3155acadae6230ca3d9a7b6fb9050e
Change-Id: I5c6ec523c42dbc107a1d253f0a89b9d42afe069d
Signed-off-by: sivasubramanian <sivasubramanian.patchaiperumal@linaro.org>

--- a/drm/Makefile.am
+++ b/drm/Makefile.am
@@ -19,11 +19,15 @@
 
 AUTOMAKE_OPTIONS = subdir-objects
 
-SUBDIRS = 
+SUBDIRS =
 
 AM_CFLAGS = 
 
 AM_LDFLAGS = 
+
+if HAVE_EGL
+AM_CFLAGS += ${EGL_CFLAGS}
+endif 
 
 lib_LTLIBRARIES = libwesteros_gl.la
 
