--- a/drm/configure.ac
+++ b/drm/configure.ac
@@ -55,6 +55,8 @@ AC_SUBST(AM_DEFAULT_VERBOSITY)])
 PKG_CHECK_MODULES([GLIB],[glib-2.0 >= 2.22.5])
 PKG_CHECK_MODULES([GTHREAD],[gthread-2.0 >= 2.38.2])
 PKG_CHECK_MODULES([WAYLAND_CLIENT],[wayland-client >= 1.6.0])
+PKG_CHECK_MODULES([EGL],[egl >= 0.0],[EGL_DETECTED=true],[EGL_DETECTED=false])
+AM_CONDITIONAL([HAVE_EGL], [test x$EGL_DETECTED = xtrue])
 PKG_CHECK_MODULES([WAYLAND_SERVER],[wayland-server >= 1.6.0])
 
 WAYLANDLIB="-lwayland-client"
