westeros-gl: drm resolution module added for compilation
- added resolution module
- we can append/prepend further modules in SUBDIRS of
configure.ac and Makefile.am

Change-Id: Id872982ba5483327f7dba02412c9f9b5a1215922
Signed-off-by: Moorthy Baskar <moorthy.baskaravenkatraman-sambamoorthy@linaro.org>

--- a/Makefile.am
+++ b/Makefile.am
@@ -36,6 +36,11 @@ if ENABLE_ESSOS
 SUBDIRS += essos
 endif
 
+# add required modules sub directory here
+if ENABLE_MODULES
+SUBDIRS += drm/modules
+endif
+
 if HAVE_EGL
 AM_CXXFLAGS += ${EGL_CFLAGS}
 endif
