--- a/drm/modules/configure.ac
+++ b/drm/modules/configure.ac
@@ -1,8 +1,8 @@
-##########################################################################
-# If not stated otherwise in this file or this component's Licenses.txt
-# file the following copyright and licenses apply:
 #
-# Copyright 2017 RDK Management
+# If not stated otherwise in this file or this component's Licenses.txt file the
+# following copyright and licenses apply:
+#
+# Copyright 2019 RDK Management
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -15,17 +15,18 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
-##########################################################################
+#
 
 #                                               -*- Autoconf -*-
 # Process this file with autoconf to produce a configure script.
 
 dnl AC_PREREQ([2.65])
-AC_INIT(resolutionmodule, 1.0.0, jeff_wannamaker@cable.comcast.com,resolutionmodule)
+AC_INIT(modules, version-1.0, moorthy.baskaravenkatraman-sambamoorthy@linaro.org,modules)
 AC_CONFIG_SRCDIR([])
-AC_CONFIG_HEADERS([config.h])
-AC_CONFIG_MACRO_DIR([.])
+AC_CONFIG_HEADERS([cfg/config.h])
+AC_CONFIG_MACRO_DIR([cfg])
 AC_CONFIG_AUX_DIR([.])
+AC_CONFIG_SUBDIRS([resolution])
 AM_INIT_AUTOMAKE([foreign no-dist-gzip dist-bzip2 1.9])
 LT_INIT
 
@@ -35,22 +36,14 @@ AC_PROG_INSTALL
 AC_PROG_MAKE_SET
 AC_PROG_CXX
 
-# Checks for header files.
-AC_CHECK_HEADERS([stdlib.h string.h unistd.h])
-
-# Checks for typedefs, structures, and compiler characteristics.
-AC_TYPE_SIZE_T
-AC_HEADER_STDBOOL
-
 # Checks for library functions.
 #Add the subdirectories to be considered for building.
 SUBDIRS=" "
+
 #to setup m4 macros
 m4_ifdef([AM_SILENT_RULES],[AM_SILENT_RULES([yes])],
 [AM_DEFAULT_VERBOSITY=1
 AC_SUBST(AM_DEFAULT_VERBOSITY)])
-
-PKG_CHECK_MODULES([libdrm], [libdrm >= 1.0])
 
 AC_CONFIG_FILES([Makefile])
 AC_OUTPUT
