--- a/test/brcm-em/Makefile.am
+++ b/test/brcm-em/Makefile.am
@@ -35,6 +35,7 @@ westeros_unittest_SOURCES = ../test-main.cpp \
                             ../test-touch.cpp \
                             ../test-simpleshell.cpp \
                             ../test-essos.cpp \
+                            ../test-clientapp.cpp \
                             soc-video-src.cpp \
                             soc-tests.cpp
 
