Harmonizing sink: part 3 -add queued_frames property -filter pts error and underflow during flush -add capture stream on error -add get decoder status query -add custom downstream event -update preroll
Change-Id: I9a28f08d058125f4878d245e1bcaef2c737f753f
Signed-off-by: jwanna001 <jeff_wannamaker@cable.comcast.com>

--- a/test/Makefile.brcm
+++ b/test/Makefile.brcm
@@ -409,6 +409,7 @@ external/.brcm-refsw:
 	cp temp/nexus/modules/core/include/nexus_core_compat.h include && \
 	cp temp/nexus/modules/core/include/nexus_core_file_init.h include && \
 	cp temp/nexus/modules/core/include/nexus_core_priv.h include && \
+	cp temp/nexus/modules/core/include/nexus_core_utils.h include && \
 	cp temp/nexus/modules/display/include/nexus_display.h include && \
 	cp temp/nexus/modules/display/include/nexus_display_custom.h include && \
 	cp temp/nexus/modules/display/include/nexus_display_init.h include && \
