Add tests for embedded composition with repeater client
Change-Id: I182e8215bf98a7c2520d9b047b0fae72ba750831
Signed-off-by: jwanna001 <jeff_wannamaker@cable.comcast.com>

--- a/test/brcm-em/Makefile.am
+++ b/test/brcm-em/Makefile.am
@@ -36,6 +36,7 @@ westeros_unittest_SOURCES = ../test-main.cpp \
                             ../test-simpleshell.cpp \
                             ../test-essos.cpp \
                             ../test-clientapp.cpp \
+                            ../test-repeaterapp.cpp \
                             soc-video-src.cpp \
                             soc-tests.cpp
 
